--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
-    
+
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
@@ -19,12 +19,25 @@
 <body>
     <div class="sidebar">
         <nav class="sidebar__navigation">
+            <div class="sidebar__navigation_fechar">
+                <button class="library__button">
+                    <a href="#">
+                        <!-- <span class="fas fa-bars"></span> -->
+                        <span class="fa fa-times"></span>
+                    </a>
+                </button>
+                <!-- <div class="linha-hamburber">
+                    <hr>
+                </div> -->
+            </div>
+
             <div class="logo">
                 <a href="">
                     <img src="./assets/icons/logo-spotify.png" alt="Logo" />
                 </a>
             </div>
             <ul>
+
                 <li>
                     <a href="">
                         <span class="fa fa-home"></span>
@@ -37,9 +50,41 @@
                         <span>Buscar</span>
                     </a>
                 </li>
+
             </ul>
+            <hr>
         </nav>
-    </div>  
+
+        <div class="library">
+            <div class="library__content">
+                <button class="library__button">
+                    <span class="fa fas fa-book"></span>
+                    <span> Sua biblioteca</span>
+                </button>
+                <span class="fa fa-plus"></span>
+            </div>
+
+            <section class="section-playlist">
+                <div class="section-playlist__content">
+                    <span class="text title">Crie sua primeira Play List</span>
+                    <span class="text subtitle">É fácil, vamos te ajudar</span>
+                    <button class="section-playlist__button"><span>Criar Play List</span></button>
+                </div>
+            </section>
+
+            <div class="cookies">
+                <a href="#">Cookies</a>
+            </div>
+
+            <div class="languages">
+                <button class="languages__button">
+                    <span class="fa fa-globe"></span>
+                    <span>Portugués dos Brasil</span>
+                </button>
+            </div>
+            <hr>
+        </div>
+    </div>
 </body>
 
 </html>
