--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/styles/var.css">
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
+    <link rel="stylesheet" href="./src/styles/main-content.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
@@ -25,7 +27,7 @@
         <nav class="sidebar__navigation">
             <div class="logo">
                 <a href="">
-                    <img src="./assets/icons/logo-spotify.png" alt="Logo" />
+                    <img src="./src/assets/icons/logo-spotify.png" alt="Logo" />
                 </a>
             </div>
             <ul>
@@ -77,6 +79,32 @@
             <hr>
         </div>
     </div>
+
+    <main>
+        <div class="main-container">
+            <nav class="header__navigation">
+                <div class="navigation">
+                  <button class="arrow-left">
+                    <img src="./src/assets/icons/small-left.png" alt="" />
+                  </button>
+                  <button class="arrow-right">
+                    <img src="./src/assets/icons/small-right.png" alt="" />
+                  </button>
+        
+                  <div class="header__search">
+                    <img src="./src/assets/icons/search.png" alt="" />
+                    <input id="search-input" maxlength="800" autocorrect="off" autocapitalize="off" spellcheck="false"
+                      placeholder="O que você quer ouvir?" value="" />
+                  </div>
+                </div>
+        
+                <div class="header__login">
+                  <button class="subscribe">Inscreva-se</button>
+                  <button class="login">Entrar</button>
+                </div>
+              </nav>
+        </div>
+    </main>
 
     <script>
         document.getElementById("menuToggle").addEventListener("click", function () {
